--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,12 @@ name: Daily PTF Data Update
 
 on:
   schedule:
-    - cron: '30 9 * * *'
+    - cron: '0 14 * * *'
   workflow_dispatch:
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
-    permissions: write-all
     
     steps:
     - uses: actions/checkout@v3
@@ -29,4 +28,13 @@ jobs:
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         EPIAS_USERNAME: ${{ secrets.EPIAS_USERNAME }}
         EPIAS_PASSWORD: ${{ secrets.EPIAS_PASSWORD }}
-      run: python update_next_day.py
+      run: |
+        python -c "
+        import os
+        print('Environment variables:')
+        print('SUPABASE_URL exists:', bool(os.getenv('SUPABASE_URL')))
+        print('SUPABASE_KEY exists:', bool(os.getenv('SUPABASE_KEY')))
+        print('EPIAS_USERNAME exists:', bool(os.getenv('EPIAS_USERNAME')))
+        print('EPIAS_PASSWORD exists:', bool(os.getenv('EPIAS_PASSWORD')))
+        "
+        python update_next_day.py
